--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@
   body,
   #app {
     @apply
-    bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500
+    bg-gradient-to-r from-blue-500 via-blue-600 to-blue-700
     w-full
     h-full
   }
